feat: adding doc_values source reader
Signed-off-by: Harsha Vamsi Kalluri <harshavamsi096@gmail.com>